semi-final commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">h</string>
+    <string name="app_name">Heximal</string>
     <string name="value">value</string>
     <string name="let_apos_s_convert">Let\'s convert</string>
     <string name="to">to</string>
